[package]
name = "anchor-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed", "idl-build"] }
anchor-spl = { version = "1.0.0", features = ["idl-build"] }

[dev-dependencies]
litesvm = "0.11.0"
litesvm-token = "0.11.0"